gedcom/tests/snapshots/tests__golden_files@xref_no_tag.ged.snap
---
source: gedcom/tests/tests.rs
description: "0 @x@\r\n"
expression: "format!(\"{:?}\",\n    err.with_source_code(NamedSource::new(filename.to_string_lossy(), data)))"
input_file: gedcom/tests/syntax_inputs/xref_no_tag.ged
---
gedcom::parse_error::no_tag

  × No tag found
   ╭─[xref_no_tag.ged:1:1]
 1 │ 0 @x@
   · ──┬──
   ·   ╰── no tag in this line
   ╰────
